# DNF_Behavior_Coordination

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.py.old
DNF_torch/: field.py  interaction_kernels.py  vis_utils.py  viz.py
Luca_MSc/: Node_Dynamics_Test_01.py  Node_Dynamics_Test_02.py  SimulationVisualizer.py  check_effector_range.py  compound_behavior.py  elementary_behavior.py  elementary_behavior_simplified.py  find.py  find_grab.py  grab_behavior_compound.py  helper_functions.py  interactors.py  move_to.py  reach_behavior_simplified.py  reach_for.py
Luca_MSc/Dynamic_Behavior_Manager/: BT_benchmark.py  SimulationVisualizer.py  behavior_config.py  behavior_manager.py  check_behavior.py  connection_builder.py  dnf_weights.py  dynamic_methods.py  elementary_behavior.py  elementary_behavior_interface.py  helper_functions.py  initializer.py  interactor_config.py  interactors.py  ros_wrappers.py  runtime_management.py  runtime_weights.py  sanity_check.py  sanity_check_interface.py  state_collector.py
Luca_MSc/find_move/: execute_find_move.py  find_move.py  ros_interactors.py
Luca_MSc/find_move  (ros2 trials)/: elementary_behavior.py
Luca_MSc/grab_compounds/: close_gripper.py  fine_reach.py  has_object.py  open_gripper.py  orient.py
Stats_Analysis/: Data_Analysis.Rproj  Data_Analysis_DNF_Benchmark.R  Data_Analysis_DNF_Benchmark_PerturbationStep_on_Failure.R  bt_dnf_benchmark_results.csv  bt_dnf_benchmark_results_robustness.csv  bt_dnf_benchmark_results_speed.csv
examples/: field_0d.py  field_1d.py  field_2d.py  field_3d.py
(+41 files in other folders)
