[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnf-torch"
version = "0.1.0"
description = "Dynamic Neural Fields for behavior coordination"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Caterina Caccavella", email = "cacc@zhaw.ch"},
    {name = "Luca Hess"}
]
dependencies = [
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "py-trees>=2.4.0",
    "pygame==2.6.1",
    "pygame-ce==2.5.5",
    "pygame-gui==0.6.5",
    "pyyaml>=6.0.3",
    "standalone-smach>=0.0.9",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchmetrics==1.7.4",
    "torchvision==0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "ruff", "mypy", "build", "twine"]

[tool.setuptools]
packages = ["DNF_torch", "Luca_MSc", "Luca_MSc.Dynamic_Behavior_Manager", "Luca_MSc.Dynamic_Behavior_Manager.DNF_interactors", "Luca_MSc.Dynamic_Behavior_Manager.benchmarking"]
